@@ -37,7 +37,7 @@ namespace pelib
 			/** Constructor
 				@param id Identifier of the task
 			**/
-			Task(const std::string &id);
+			Task(const std::string &id, bool is_streaming = true);
 			/** Copy constructor **/
 			Task(const Task&);
 
@@ -91,16 +91,10 @@ namespace pelib
 			virtual double
 			getWorkload() const;
 
-			virtual double
-			getStartWorkload() const;
-
 			/** Sets the workload, in number of instructions, of the task **/
 			virtual void
 			setWorkload(double workload);
 			
-			virtual void
-			setStartWorkload(double workload);
-
 			/** Gets the maximum number of cores that can run this task in parallel in an efficient manner **/
 			virtual double
 			getMaxWidth() const;
@@ -123,9 +117,6 @@ namespace pelib
 			**/
 			virtual double
 			runtime(double width = 1, double frequency = 1) const;
-
-			virtual double
-			startRuntime(double width = 1, double frequency = 1) const;
 
 			/** Allows the comparison of tasks. Used with ==, allows the test of difference **/
 			virtual bool
@@ -150,14 +141,18 @@ namespace pelib
 			/** Allows the comparison of tasks. Used with <, allows the test of difference **/
 	    		virtual bool
 			operator==(const Task &other) const;
+
+			bool
+			isStreaming() const;
 			
 		protected:
 			/** Frequency and width allocated to this task **/
 			double frequency, width;
 			/** Workload in number of instructions and maximum number of cores able to run this task **/
-			double workload, start_workload, maxWidth;
+			double workload, maxWidth;
 			/** Time at which this task starts **/
 			float start_time;
+			bool streaming;
 			/** Name, source code module name and efficiency formula of the task **/
 			std::string name, module, efficiencyString;
 			/** Sets of producers and consumers linked to this task **/
